# wayland-clipboard-listener

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple.rs
marine-clipboard-tools/: Cargo.toml
src/: constvar.rs  dispatch.rs  dispatch_wlr.rs  lib.rs  main.rs
