[package]
name = "wayland-clipboard-listener"
version = "0.2.6"
documentation = "https://docs.rs/wayland-clipboard-listener/"
edition = "2021"
license = "GPL-3.0"
description = "impl wlr-data-control-unstable-v1, listen for clipboard"
homepage = "https://github.com/Decodetalkers/wayland-clipboard-listener"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["wayland"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "marine-clipboard-tools"]

[dependencies]
wayland-protocols = { version = "0.32.5", default-features = false, features = [
	"unstable",
	"client",
] }
#wayland-protocols = { version = "=0.30.0-beta.13", features = ["client", "unstable"] }


wayland-client = "0.31.7"
wayland-protocols-wlr = { version = "0.3.5", default-features = false, features = [
	"client",
] }
os_pipe = "1.2.1"
thiserror = "1.0.65"
