[package]
name = "wayland-clipboard-listener"
version = "0.3.1"
documentation = "https://docs.rs/wayland-clipboard-listener/"
edition = "2021"
license = "GPL-3.0"
description = "impl wlr-data-control-unstable-v1, listen for clipboard"
homepage = "https://github.com/Decodetalkers/wayland-clipboard-listener"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["wayland"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = [".", "marine-clipboard-tools"]

[workspace.dependencies]
wayland-clipboard-listener = { version = "0.3.0", path = "./" }

[dependencies]
wayland-protocols = { version = "0.32.8", default-features = false, features = [
	"unstable",
	"client",
] }


wayland-client = "0.31.10"
wayland-protocols-wlr = { version = "0.3.8", default-features = false, features = [
	"client",
] }
os_pipe = "1.2.2"
thiserror = "2.0.12"
