[package]
name = "marine-clipboard-tools"
version = "0.2.4"
edition = "2021"
license = "GPL-3.0"
description = "impl wlr-data-control-unstable-v1, listen for clipboard"
homepage = "https://github.com/Decodetalkers/wayland-clipboard-listener"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["wayland"]

[dependencies]
wayland-clipboard-listener = { path = "../" }
nix = "0.29.0"
libc = "0.2.161"
