[package]
name = "marine-clipboard-tools"
version = "0.2.4"
edition = "2021"
license = "GPL-3.0"
description = "impl wlr-data-control-unstable-v1, listen for clipboard"
homepage = "https://github.com/Decodetalkers/wayland-clipboard-listener"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["wayland"]

[dependencies]
wayland-clipboard-listener = { path = "../" }
nix = { version = "0.30.1", features = ["fs", "process"] }
libc = "0.2.172"
